2007-12-05  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Localization/GettextDomain.cs,
	  Mono.Addins.Localization/IPluralAddinLocalizer.cs,
	  Mono.Addins.Localization/GettextLocalizer.cs, Mono.Addins.mdp,
	  Mono.Addins/AddinLocalizer.cs, Makefile.am: Add support for plural
	  forms.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Localization/GettextDomain.cs: Fix bug in string
	  unmarshalling.

2007-12-03  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/RuntimeAddin.cs, Mono.Addins/Addin.cs: Added more informative
	  implementation of ToString ().
	* Mono.Addins/AddinSessionService.cs, Mono.Addins/AddinManager.cs: Added
	  CurrentAddin property, which returns the add-in on which the calling
	  method is implemented. Same for CurrentLocalizer.
	* Mono.Addins/ExtensionNode.cs: Allow getting the extension context bound to
	  an extension node.

2007-12-03  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinScanner.cs: ScanNodeSet may change the
	  ExtensionNodeSets collection, so it is necessary to make a copy when
	  iterating with it.

2007-12-03  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/TypeExtensionNode.cs: Made the description of
	  TypeExtensionNode shorter.
	* Mono.Addins/AddinRegistry.cs: Made the add-in registry constructor public.
	* Mono.Addins.Database/SetupProcess.cs: Fix problem when M.A. is located in
	  a folder with spaces in the name. Fix by Georg Wächter.

2007-11-19  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinDatabase.cs: Workaround for mcs bug.

2007-11-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Description/ExtensionNodeDescription.cs: Add missing
	  ChildNodes property.

2007-11-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Localization, Mono.Addins.Localization/GettextDomain.cs,
	  Mono.Addins.Localization/IAddinLocalizer.cs,
	  Mono.Addins.Localization/NullLocalizer.cs,